--- a/languages/newcustomer-discount.pot
+++ b/languages/newcustomer-discount.pot
@@ -2,8 +2,8 @@
 # This file is distributed under the GPLv2 or later.
 msgid ""
 msgstr ""
-"Project-Id-Version: New-Customer-Coupon for WooCommerce 0.1.0\n"
-"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/wp-smart-coupon-system\n"
+"Project-Id-Version: New-Customer-Gutschein for WooCommerce 0.1.0\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/wp-smart-Gutschein-system\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -17,7 +17,7 @@ msgstr ""
 #. Plugin Name of the plugin
 #: newcustomer-discount.php
 #: includes/admin/core/class-ncd-admin-menu.php:151
-msgid "New-Customer-Coupon for WooCommerce"
+msgid "New-Customer-Gutschein for WooCommerce"
 msgstr ""
 
 #. Plugin URI of the plugin
@@ -144,7 +144,7 @@ msgstr ""
 #: includes/admin/customers/class-ncd-admin-customers.php:59
 #: includes/admin/customers/class-ncd-admin-customers.php:205
 #: includes/admin/customers/class-ncd-admin-customers.php:233
-#: includes/class-ncd-coupon-generator.php:150
+#: includes/class-ncd-Gutschein-generator.php:150
 msgid "Ungültige E-Mail-Adresse."
 msgstr ""
 
@@ -205,31 +205,31 @@ msgstr ""
 msgid "Template \"%s\" wurde aktiviert und wird nun für alle E-Mails verwendet."
 msgstr ""
 
-#: includes/class-ncd-coupon-generator.php:134
+#: includes/class-ncd-Gutschein-generator.php:134
 msgid "Konnte keinen einzigartigen Code generieren."
 msgstr ""
 
-#: includes/class-ncd-coupon-generator.php:262
+#: includes/class-ncd-Gutschein-generator.php:262
 msgid "Gutschein existiert nicht."
 msgstr ""
 
-#: includes/class-ncd-coupon-generator.php:280
+#: includes/class-ncd-Gutschein-generator.php:280
 msgid "Gutschein ist abgelaufen."
 msgstr ""
 
-#: includes/class-ncd-coupon-generator.php:283
+#: includes/class-ncd-Gutschein-generator.php:283
 msgid "Gutschein wurde bereits eingelöst."
 msgstr ""
 
-#: includes/class-ncd-coupon-generator.php:416
-msgid "Ungültige Code-Länge."
+#: includes/class-ncd-Gutschein-generator.php:416
+msgid "Ungültige Gutschein-Länge."
 msgstr ""
 
-#: includes/class-ncd-coupon-generator.php:424
-msgid "Ungültiger Code-Präfix."
+#: includes/class-ncd-Gutschein-generator.php:424
+msgid "Ungültiger Gutschein-Präfix."
 msgstr ""
 
-#: includes/class-ncd-coupon-generator.php:433
+#: includes/class-ncd-Gutschein-generator.php:433
 msgid "Ungültige Zeichen im Code."
 msgstr ""
 
@@ -315,7 +315,7 @@ msgid "Konvertierung fehlgeschlagen."
 msgstr ""
 
 #: newcustomer-discount.php:96
-msgid "Das New-Customer-Coupon for WooCommerce benötigt WooCommerce. Bitte installieren und aktivieren Sie WooCommerce."
+msgid "Das New-Customer-Gutschein for WooCommerce benötigt WooCommerce. Bitte installieren und aktivieren Sie WooCommerce."
 msgstr ""
 
 #: newcustomer-discount.php:126
@@ -444,11 +444,11 @@ msgstr ""
 
 #: templates/admin/settings-page.php:33
 #: templates/admin/settings-page.php:272
-msgid "Gutschein-Einstellungen"
+msgid "Gutschein"
 msgstr ""
 
 #: templates/admin/settings-page.php:36
-msgid "Code-Konfiguration"
+msgid "Gutschein-konfiguration"
 msgstr ""
 
 #: templates/admin/settings-page.php:39
@@ -571,11 +571,11 @@ msgid "Anzahl der Tage, die der Gutschein gültig ist."
 msgstr ""
 
 #: templates/admin/settings-page.php:335
-msgid "Gutscheincode-Konfiguration"
+msgid "Gutscheincoupon-konfiguration"
 msgstr ""
 
 #: templates/admin/settings-page.php:344
-msgid "Code-Präfix"
+msgid "Gutschein-Präfix"
 msgstr ""
 
 #: templates/admin/settings-page.php:355
@@ -583,7 +583,7 @@ msgid "Präfix für automatisch generierte Gutscheincodes (max. 5 Zeichen)."
 msgstr ""
 
 #: templates/admin/settings-page.php:363
-msgid "Code-Länge"
+msgid "Gutschein-Länge"
 msgstr ""
 
 #: templates/admin/settings-page.php:375
