FIX: new ajax handling for js files, language changes, uninstall enchanced

--- a/languages/newcustomer-discount-en_US.po
+++ b/languages/newcustomer-discount-en_US.po
@@ -672,7 +672,7 @@ msgid "Ausgewählte Daten zurücksetzen"
 msgstr "Reset Selected Data"
 
 #: templates/admin/statistics-page.php:15
-msgid "Neukunden Rabatt Statistiken"
+msgid "Neukunden-Gutschein Statistiken"
 msgstr "New Customer Discount Statistics"
 
 #: templates/admin/statistics-page.php:21
