--- a/languages/newcustomer-discount-es_ES.po
+++ b/languages/newcustomer-discount-es_ES.po
@@ -696,7 +696,7 @@ msgid "Ausgewählte Daten zurücksetzen"
 msgstr "Restablecer datos seleccionados"
 
 #: templates/admin/statistics-page.php:15
-msgid "Neukunden Rabatt Statistiken"
+msgid "Neukunden-Gutschein Statistiken"
 msgstr "Estadísticas de descuentos para nuevos clientes"
 
 #: templates/admin/statistics-page.php:21
