--- a/languages/newcustomer-discount-es_ES.po
+++ b/languages/newcustomer-discount-es_ES.po
@@ -1016,7 +1016,7 @@ msgid "💰 Minimum order value of %s"
 msgstr "💰 Valor mínimo de pedido de %s"
 
 #: templates/email/base/classic.php:37
-msgid "To Online Shop"
+msgid "Visit us"
 msgstr "Ir a la Tienda Online"
 
 #: templates/email/base/classic.php:42
