--- a/languages/newcustomer-discount-it_IT.po
+++ b/languages/newcustomer-discount-it_IT.po
@@ -1011,7 +1011,7 @@ msgid "💰 Minimum order value of %s"
 msgstr "💰 Valore minimo dell'ordine di %s"
 
 #: templates/email/base/classic.php:37
-msgid "To Online Shop"
+msgid "Visit us"
 msgstr "Al Negozio Online"
 
 #: templates/email/base/classic.php:42
