--- a/languages/newcustomer-discount-fr_FR.po
+++ b/languages/newcustomer-discount-fr_FR.po
@@ -4,13 +4,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: New-Customer-Discount for WooCommerce 1.0.3\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/New-Customer-Discount-for-WooCommerce\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Last-Translator: Maciej Suchowski <suchowski@aol.com>\n"
+"Language-Team: fr_FR <suchowski@aol.com>\n"
+"Language: fr_FR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "POT-Creation-Date: 2024-11-11T23:43:45+01:00\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2024-11-20T23:43:45+01:00\n\n"
 "X-Generator: WP-CLI 2.11.0\n"
 "X-Domain: newcustomer-discount\n"
 
@@ -164,10 +165,6 @@ msgstr "Paramètres"
 #: includes/admin/core/class-ncd-admin-menu.php:103
 msgid "Statistics"
 msgstr "Statistiques"
-
-#: includes/admin/core/class-ncd-admin-menu.php:147
-msgid "New-Customer-Discount for WooCommerce"
-msgstr "Remise-Nouveaux-Clients pour WooCommerce"
 
 #: includes/admin/core/class-ncd-admin-menu.php:150
 msgid "The main page could not be loaded. Please check the installation."
@@ -814,13 +811,8 @@ msgid "You can also create a bug report or feature request on the %sWordPress.or
 msgstr "Vous pouvez également créer un rapport de bug ou une demande de fonctionnalité sur la %spage de l'extension WordPress.org%s."
 
 #: templates/admin/statistics-page.php:15
-<<<<<<< Updated upstream
 msgid "New Customer Discount Statistics"
 msgstr "Statistiques des réductions nouveaux clients"
-=======
-msgid "Neukunden-Gutschein Statistiken"
-msgstr "Statistiques des remises nouveaux clients"
->>>>>>> Stashed changes
 
 #: templates/admin/statistics-page.php:19
 msgid "Customers"
