--- a/languages/newcustomer-discount-pl_PL.po
+++ b/languages/newcustomer-discount-pl_PL.po
@@ -4,13 +4,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: New-Customer-Discount for WooCommerce 1.0.3\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/New-Customer-Discount-for-WooCommerce\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Last-Translator: FULL NAME <suchowski@aol.com>\n"
+"Language-Team: LANGUAGE <suchowski@aol.com>\n"
+"Language: pl_PL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "POT-Creation-Date: 2024-11-11T23:43:45+01:00\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2024-11-20T23:43:45+01:00\n\n"
 "X-Generator: WP-CLI 2.11.0\n"
 "X-Domain: newcustomer-discount\n"
 
@@ -164,10 +165,6 @@ msgstr "Ustawienia"
 #: includes/admin/core/class-ncd-admin-menu.php:103
 msgid "Statistics"
 msgstr "Statystyki"
-
-#: includes/admin/core/class-ncd-admin-menu.php:147
-msgid "New-Customer-Discount for WooCommerce"
-msgstr "Rabat dla nowych klientów WooCommerce"
 
 #: includes/admin/core/class-ncd-admin-menu.php:150
 msgid "The main page could not be loaded. Please check the installation."
